--- a/index.html
+++ b/index.html
@@ -1,70 +1,120 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Rose Day Surprise ❤️</title>
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 <style>
 html, body {
-  margin:0; padding:0; width:100%; height:100%; overflow:hidden;
+  margin:0; padding:0;
+  width:100%; height:100%;
+  overflow:hidden;
   background: radial-gradient(ellipse at bottom, #0a0a2a, #000014);
   font-family:'Great Vibes', cursive;
-  transition: background 1s;
 }
 
-canvas { position:absolute; inset:0; z-index:1; }
+canvas {
+  position:absolute;
+  inset:0;
+  z-index:1;
+}
 
 .center {
-  position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-  text-align:center; z-index:5;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  text-align:center;
+  z-index:5;
 }
 
 #moon {
-  position:absolute; width:120px; height:120px;
+  position:absolute;
+  width:120px;
+  height:120px;
+  left:50%;
+  top:100px;
+  transform:translate(-50%, -50%) scale(0.5);
   background: radial-gradient(circle, #fffacd 0%, #ffe 70%, transparent 100%);
-  border-radius:50%; box-shadow:0 0 60px 30px #fffacd; z-index:3;
-  opacity:0; transform:translate(-50%, -50%) scale(0.5); left:50%; top:100px;
+  border-radius:50%;
+  box-shadow:0 0 60px 30px #fffacd;
+  opacity:0;
   transition:2s;
+  z-index:3;
 }
 
 /* Clouds */
-.cloud { position:absolute; opacity:0.25; z-index:2; animation:cloudMove 60s linear infinite; }
-.cloud .c { position:absolute; background: rgba(255,255,255,0.15); border-radius:50%; }
+.cloud {
+  position:absolute;
+  opacity:0;
+  z-index:2;
+  animation:cloudMove 60s linear infinite;
+}
+.cloud .c {
+  position:absolute;
+  background: rgba(255,255,255,0.15);
+  border-radius:50%;
+}
 .cloud1 { top:80px; left:-300px; }
-.cloud1 .c:nth-child(1){ width:120px; height:70px; left:0; top:10px; }
+.cloud2 { top:150px; left:-400px; animation-duration:80s; }
+
+.cloud1 .c:nth-child(1){ width:120px; height:70px; }
 .cloud1 .c:nth-child(2){ width:80px; height:50px; left:80px; top:0; }
 .cloud1 .c:nth-child(3){ width:100px; height:60px; left:50px; top:20px; }
-.cloud2 { top:150px; left:-400px; animation-duration:80s; }
-.cloud2 .c:nth-child(1){ width:150px; height:80px; left:0; top:10px; }
+
+.cloud2 .c:nth-child(1){ width:150px; height:80px; }
 .cloud2 .c:nth-child(2){ width:100px; height:60px; left:90px; top:0; }
 .cloud2 .c:nth-child(3){ width:120px; height:70px; left:60px; top:20px; }
-@keyframes cloudMove {0%{ left:-300px; }100%{ left:110%; }}
+
+@keyframes cloudMove {
+  from { left:-300px; }
+  to { left:110%; }
+}
 
 #heart {
-  width:150px; height:150px; cursor:pointer;
+  width:150px;
+  height:150px;
+  cursor:pointer;
   animation:beat 1.2s infinite;
-  position:relative; z-index:5;
 }
-@keyframes beat {0%,100% { transform:scale(1); }50% { transform:scale(1.15); }}
-#heart svg { width:100%; height:100%; fill:#ff2a5f; filter:drop-shadow(0 0 25px #ff4d87); }
+@keyframes beat {
+  0%,100% { transform:scale(1); }
+  50% { transform:scale(1.15); }
+}
+#heart svg {
+  width:100%;
+  height:100%;
+  fill:#ff2a5f;
+  filter:drop-shadow(0 0 25px #ff4d87);
+}
 
 #msg {
-  font-size:72px; font-weight:700; color:#ff2a5f;
-  text-shadow:0 0 25px #ff4d87,0 0 50px #ff80aa,0 0 75px #ffb3c6;
-  margin-top:30px; opacity:0; transform:scale(0.8); transition:2s;
+  font-size:72px;
+  color:#ff2a5f;
+  text-shadow:0 0 25px #ff4d87,0 0 50px #ff80aa;
+  margin-top:30px;
+  opacity:0;
+  transform:scale(0.8);
+  transition:2s;
 }
 
 #photo {
-  width:160px; height:160px;
+  width:160px;
+  height:160px;
   background:url('her.jpg') center/cover no-repeat;
   clip-path:polygon(50% 15%,61% 4%,75% 4%,90% 20%,90% 40%,50% 90%,10% 40%,10% 20%,25% 4%,39% 4%);
-  opacity:0; transform:translateX(-50%) scale(0.5);
-  transition:2s; position:absolute; left:50%; bottom:10%; z-index:5;
+  position:absolute;
+  left:50%;
+  bottom:8%;
+  transform:translateX(-50%) scale(0.5);
+  opacity:0;
+  transition:2s;
   box-shadow:0 0 50px #ff2a5f;
 }
 </style>
 </head>
+
 <body>
 <canvas id="fx"></canvas>
 
@@ -76,63 +126,100 @@ canvas { position:absolute; inset:0; z-index:1; }
 <div class="center">
   <div id="heart">
     <svg viewBox="0 0 32 29.6">
-      <path d="M23.6,0c-2.6,0-5,1.3-6.6,3.3C15.4,1.3,13,0,10.4,0C4.7,0,0,4.7,0,10.4c0,6.3,10.6,12.6,16,19.2
+      <path d="M23.6,0c-2.6,0-5,1.3-6.6,3.3C15.4,1.3,13,0,10.4,0
+      C4.7,0,0,4.7,0,10.4c0,6.3,10.6,12.6,16,19.2
       c5.4-6.6,16-13,16-19.2C32,4.7,27.3,0,23.6,0z"/>
     </svg>
   </div>
+
   <div id="msg">Happy Rose Day My Love 🌹</div>
   <div id="photo"></div>
 </div>
 
 <script>
-const canvas=document.getElementById("fx");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth; canvas.height=innerHeight;
+const canvas = document.getElementById("fx");
+const ctx = canvas.getContext("2d");
 
+function resize(){
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
+}
+resize();
+addEventListener("resize", resize);
+
+const rand = (a,b)=>Math.random()*(b-a)+a;
 let particles=[], stars=[], balloons=[];
 let animationStarted=false;
 
-function rand(a,b){ return Math.random()*(b-a)+a; }
-
-class Particle{constructor(x,y,vx,vy,size,color,life){this.x=x;this.y=y;this.vx=vx;this.vy=vy;this.size=size;this.color=color;this.life=life;}
-update(){this.x+=this.vx;this.y+=this.vy;this.vy+=0.05;this.life--;}
-draw(){ctx.fillStyle=this.color;ctx.beginPath();ctx.arc(this.x,this.y,this.size,0,Math.PI*2);ctx.fill();}}
-
-class Star{constructor(){this.x=rand(0,canvas.width);this.y=rand(0,canvas.height/2);this.size=rand(1,3);this.twinkle=Math.random();}
-update(){this.twinkle+=0.05;}
-draw(){ctx.fillStyle=`rgba(255,255,255,${Math.abs(Math.sin(this.twinkle))})`;ctx.beginPath();ctx.arc(this.x,this.y,this.size,0,Math.PI*2);ctx.fill();}}
-
-class Balloon{
-  constructor(){this.x=rand(50,canvas.width-50); this.y=canvas.height+rand(20,100); this.size=rand(12,18); this.speed=rand(0.4,0.6); this.color="#ff2a5f"; this.letter="M"; this.shine=0;}
-  update(){ this.y -= this.speed; this.shine+=0.05; }
+/* ⭐ FIXED STAR CLASS — FULL SCREEN ⭐ */
+class Star{
+  constructor(){
+    this.x = rand(0, canvas.width);
+    this.y = rand(0, canvas.height); // 🔥 FULL HEIGHT
+    this.size = rand(1,3);
+    this.twinkle = Math.random()*Math.PI*2;
+  }
+  update(){ this.twinkle += 0.03; }
   draw(){
-    const s=this.size; const x=this.x; const y=this.y;
-    ctx.strokeStyle="#fff"; ctx.lineWidth=1.5; ctx.beginPath(); ctx.moveTo(x,y+s); ctx.lineTo(x,y+s+25); ctx.stroke();
-    ctx.fillStyle=this.color;
-    const glow=Math.abs(Math.sin(this.shine))*0.5+0.5;
-    ctx.shadowColor="rgba(255,50,100,0.7)"; ctx.shadowBlur=15*glow;
+    ctx.fillStyle=`rgba(255,255,255,${Math.abs(Math.sin(this.twinkle))})`;
     ctx.beginPath();
-    ctx.moveTo(x, y);
-    ctx.bezierCurveTo(x, y - s, x - s, y - s, x - s, y);
-    ctx.bezierCurveTo(x - s, y + s, x, y + s*1.5, x, y + s*2);
-    ctx.bezierCurveTo(x, y + s*1.5, x + s, y + s, x + s, y);
-    ctx.bezierCurveTo(x + s, y - s, x, y - s, x, y);
+    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
     ctx.fill();
-    ctx.fillStyle="#fff"; ctx.font=`${s}px Arial`; ctx.textAlign="center"; ctx.textBaseline="middle"; ctx.fillText(this.letter,x,y);
-    ctx.shadowBlur=0;
   }
 }
 
-function explode(x,y){for(let i=0;i<200;i++){let hue=rand(0,360);particles.push(new Particle(x,y,rand(-5,5),rand(-7,-2),rand(2,4),`hsl(${hue},100%,60%)`,rand(60,120)));} for(let i=0;i<40;i++) stars.push(new Star());}
+class Particle{
+  constructor(x,y,vx,vy,size,color,life){
+    Object.assign(this,{x,y,vx,vy,size,color,life});
+  }
+  update(){ this.x+=this.vx; this.y+=this.vy; this.vy+=0.05; this.life--; }
+  draw(){
+    ctx.fillStyle=this.color;
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+    ctx.fill();
+  }
+}
+
+class Balloon{
+  constructor(){
+    this.x=rand(50,canvas.width-50);
+    this.y=canvas.height+rand(20,100);
+    this.size=rand(12,18);
+    this.speed=rand(0.4,0.7);
+    this.letter="M";
+    this.shine=0;
+  }
+  update(){ this.y-=this.speed; this.shine+=0.05; }
+  draw(){
+    ctx.shadowColor="rgba(255,50,100,0.7)";
+    ctx.shadowBlur=15;
+    ctx.fillStyle="#ff2a5f";
+    ctx.beginPath();
+    ctx.ellipse(this.x,this.y,this.size,this.size*1.3,0,0,Math.PI*2);
+    ctx.fill();
+    ctx.shadowBlur=0;
+    ctx.fillStyle="#fff";
+    ctx.font=`${this.size}px Arial`;
+    ctx.textAlign="center";
+    ctx.fillText(this.letter,this.x,this.y+5);
+  }
+}
+
+function explode(x,y){
+  for(let i=0;i<200;i++){
+    particles.push(new Particle(x,y,rand(-5,5),rand(-7,-2),rand(2,4),
+    `hsl(${rand(0,360)},100%,60%)`,100));
+  }
+  for(let i=0;i<60;i++) stars.push(new Star());
+}
 
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  if(animationStarted){
-    particles.forEach((p,i)=>{p.update();p.draw();if(p.life<=0)particles.splice(i,1);});
-    stars.forEach(s=>{s.update();s.draw();});
-    balloons.forEach(b=>{b.update();b.draw();});
-    balloons=balloons.filter(b=>b.y+b.size>0);
-  }
+  stars.forEach(s=>{s.update();s.draw();});
+  particles.forEach((p,i)=>{p.update();p.draw(); if(p.life<=0)particles.splice(i,1);});
+  balloons.forEach(b=>{b.update();b.draw();});
+  balloons=balloons.filter(b=>b.y+b.size>0);
   requestAnimationFrame(animate);
 }
 animate();
@@ -141,49 +228,21 @@ document.getElementById("heart").onclick=()=>{
   if(animationStarted) return;
   animationStarted=true;
 
-  const heart = document.getElementById("heart");
+  const r = heart.getBoundingClientRect();
+  explode(r.left+r.width/2, r.top+r.height/2);
 
-  // Spark/flash at heart
-  const rect = heart.getBoundingClientRect();
-  explode(rect.left + rect.width/2, rect.top + rect.height/2);
+  heart.style.display="none";
+  moon.style.opacity=1;
+  moon.style.transform="translate(-50%,-50%) scale(1)";
 
-  heart.style.display = "none"; // vanish
+  document.querySelectorAll(".cloud").forEach(c=>c.style.opacity=0.25);
 
-  // Moon
-  const moon=document.getElementById("moon"); 
-  moon.style.opacity=1; 
-  moon.style.transform="translate(-50%, -50%) scale(1)";
-
-  // Fireworks
-  let count=0;
-  const fwInterval=setInterval(()=>{
-    explode(rand(canvas.width*0.2,canvas.width*0.8),rand(canvas.height*0.2,canvas.height*0.5)); 
-    count++; 
-    if(count>=6) clearInterval(fwInterval);
-  },500);
-
-  // Clouds visible
-  document.querySelectorAll('.cloud').forEach(c=>c.style.opacity=0.25);
-
-  // Text + photo
-  const msg=document.getElementById("msg"); 
-  msg.style.opacity=1; 
+  msg.style.opacity=1;
   msg.style.transform="scale(1)";
-  const photo=document.getElementById("photo"); 
-  photo.style.opacity=1; 
+  photo.style.opacity=1;
   photo.style.transform="translateX(-50%) scale(1.5)";
 
-  // Balloons with limit
-  let balloonsLimit = 8;
-  function addBalloons(){
-    if(balloons.length >= balloonsLimit) {
-      setTimeout(addBalloons, 2000); // next batch delay
-      return;
-    }
-    balloons.push(new Balloon());
-    setTimeout(addBalloons, 500); // next balloon
-  }
-  addBalloons();
+  setInterval(()=>balloons.length<8 && balloons.push(new Balloon()),600);
 };
 </script>
 </body>
